minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        # image: docker.io/bitnami/minio:2022
        image: quay.io/minio/minio:latest
        ports:
        - containerPort: 9000
        - containerPort: 9001
        imagePullPolicy: Always
        volumeMounts:
        - name: minio-storage
          mountPath: "/data"
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
