minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: minio
  namespace: minio-system
spec:
  ingressClassName: public
  tls:
  - hosts:
    - cloud08.core.wits.ac.za
    secretName: microbot-ingress-tls
  rules:
  - host: cloud08.core.wits.ac.za
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /minio/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-service
            port:
              number: 9001
